k8s/base/inventory-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-service
  template:
    metadata:
      labels:
        app: inventory-service
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8081'
        prometheus.io/path: '/metrics'
    spec:
      containers:
        - name: inventory-service
          image: ghcr.io/rimalklola/inventory-service:latest
          
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
              name: http
          
          # Probes are at the same level as 'ports', 'image', 'name'
          livenessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  labels:
    app: inventory-service
spec:
  type: ClusterIP
  selector:
    app: inventory-service # Finds the pods
  ports:
    - name: http
      port: 80           # Service runs on port 80
      targetPort: 8081   # Sends traffic to pod's port 8081
